// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonStatusIcon.OutOfSync 1`] = `
[
  <i
    className="fa fa-arrow-alt-circle-up"
    qe-id="utils-sync-status-title"
    style={
      {
        "color": "#f4c030",
      }
    }
    title="OutOfSync"
  />,
  " ",
]
`;

exports[`ComparisonStatusIcon.Synced 1`] = `
[
  <i
    className="fa fa-check-circle"
    qe-id="utils-sync-status-title"
    style={
      {
        "color": "#18BE94",
      }
    }
    title="Synced"
  />,
  " ",
]
`;

exports[`ComparisonStatusIcon.Unknown 1`] = `
<svg
  className="icon spin"
  qe-id="utils-sync-status-title"
  style={
    {
      "color": "#CCD6DD",
    }
  }
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
    fill="#CCD6DD"
  />
</svg>
`;

exports[`HealthStatusIcon.Degraded 1`] = `
<i
  className="fa fa-heart-broken utils-health-status-icon"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#E96D76",
    }
  }
  title="Degraded"
/>
`;

exports[`HealthStatusIcon.Healthy 1`] = `
<i
  className="fa fa-heart utils-health-status-icon"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#18BE94",
    }
  }
  title="Healthy"
/>
`;

exports[`HealthStatusIcon.Missing 1`] = `
<i
  className="fa fa-ghost utils-health-status-icon"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#f4c030",
    }
  }
  title="Missing"
/>
`;

exports[`HealthStatusIcon.Progressing 1`] = `
<svg
  className="icon spin"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#0DADEA",
    }
  }
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
    fill="#0DADEA"
  />
</svg>
`;

exports[`HealthStatusIcon.Suspended 1`] = `
<i
  className="fa fa-pause-circle utils-health-status-icon"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#766f94",
    }
  }
  title="Suspended"
/>
`;

exports[`HealthStatusIcon.Unknown 1`] = `
<i
  className="fa fa-question-circle utils-health-status-icon"
  qe-id="utils-health-status-title"
  style={
    {
      "color": "#CCD6DD",
    }
  }
  title="Unknown"
/>
`;

exports[`OperationState.Deleting 1`] = `
[
  <svg
    className="icon spin"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#0DADEA",
      }
    }
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
      fill="#0DADEA"
    />
  </svg>,
  " ",
  "Deleting",
]
`;

exports[`OperationState.Sync OK 1`] = `
[
  <i
    className="fa fa-check-circle"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#18BE94",
      }
    }
    title="Sync OK"
  />,
  " ",
  "Sync OK",
]
`;

exports[`OperationState.Sync error 1`] = `
[
  <i
    className="fa fa-times-circle"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#E96D76",
      }
    }
    title="Sync error"
  />,
  " ",
  "Sync error",
]
`;

exports[`OperationState.Sync failed 1`] = `
[
  <i
    className="fa fa-times-circle"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#E96D76",
      }
    }
    title="Sync failed"
  />,
  " ",
  "Sync failed",
]
`;

exports[`OperationState.Syncing 1`] = `
[
  <svg
    className="icon spin"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#0DADEA",
      }
    }
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
      fill="#0DADEA"
    />
  </svg>,
  " ",
  "Syncing",
]
`;

exports[`OperationState.Unknown 1`] = `
[
  <svg
    className="icon spin"
    qe-id="utils-operations-status-title"
    style={
      {
        "color": "#0DADEA",
      }
    }
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
      fill="#0DADEA"
    />
  </svg>,
  " ",
  "Unknown",
]
`;

exports[`OperationState.quiet 1`] = `null`;

exports[`OperationState.undefined 1`] = `null`;

exports[`ResourceResultIcon.Hook.Error 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Failed 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Running 1`] = `
<svg
  className="icon spin"
  qe-id="utils-resource-result-icon"
  style={
    {
      "color": "#0DADEA",
    }
  }
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
    fill="#0DADEA"
  />
</svg>
`;

exports[`ResourceResultIcon.Hook.Succeeded 1`] = `
<i
  className="fa fa-heart"
  style={
    {
      "color": "#18BE94",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Terminating 1`] = `
<svg
  className="icon spin"
  qe-id="utils-resource-result-icon"
  style={
    {
      "color": "#DE303D",
    }
  }
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
    fill="#DE303D"
  />
</svg>
`;

exports[`ResourceResultIcon.Pruned 1`] = `
<i
  className="fa fa-trash"
  style={
    {
      "color": "#CCD6DD",
    }
  }
/>
`;

exports[`ResourceResultIcon.SyncFailed 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Synced 1`] = `
<i
  className="fa fa-heart"
  style={
    {
      "color": "#18BE94",
    }
  }
  title="Synced: my-message"
/>
`;
